src/objects/Service_Measures_Data__c.object
<CustomObject>
    <description>Pre-CRS Services Measure Data</description>
    <fields>
        <fullName>Average_circulation__c</fullName>
        <inlineHelpText>Average circulation during this reporting period</inlineHelpText>
        <label>Average circulation</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Carers_and_others__c</fullName>
        <inlineHelpText>Carers, former carers, family members or friends</inlineHelpText>
        <label>Carers and others</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Carers_and_others_referred__c</fullName>
        <inlineHelpText>Carers, former carers, family members or friends newly referred during this reporting period</inlineHelpText>
        <label>Carers and others referred</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Click when the measures data for this month are completed. You will be able edit the data afterwards if necessary.</inlineHelpText>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Frequency_of_newsletter__c</fullName>
        <inlineHelpText>Frequency of newsletter during this reporting period</inlineHelpText>
        <label>Frequency of newsletter</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <formula>CASE (Service__r.service_type__c ,&quot;Activity group&quot;,&quot;Events&quot;,
&quot;Dementia cafe&quot;,&quot;Events&quot;,
&quot;Peer support group&quot;,&quot;Events&quot;,
&quot;Singing for the brain&quot;,&quot;Events&quot;,
&quot;Day care and support (establishment based)&quot;,&quot;Care services&quot;,
&quot;Registered home care and support&quot;,&quot;Care services&quot;,
&quot;Advocacy&quot;,&quot;One to one support&quot;,
&quot;Befriending&quot;,&quot;One to one support&quot;,
&quot;Community support service&quot;,&quot;One to one support&quot;,
&quot;Dementia adviser&quot;,&quot;One to one support&quot;,
&quot;Dementia support&quot;,&quot;One to one support&quot;,
&quot;Other (one to one)&quot;,&quot;One to one support&quot;,
&quot;Other services&quot;,&quot;Other services&quot;,
&quot;Information programme&quot;,&quot;Training&quot;,
&quot;Awareness raising&quot;,&quot;Information and helplines&quot;,
&quot;Information provision&quot;,&quot;Information and helplines&quot;,
&quot;Telephone helpline&quot;,&quot;Information and helplines&quot;,
&quot;Newsletter&quot;,&quot;Newsletters&quot;,
&quot;Unknown&quot;)</formula>
        <inlineHelpText>Type of service. This determines the type of measures to be recorded.</inlineHelpText>
        <label>Group Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Events__c</fullName>
        <inlineHelpText>Number of meetings or events held in the reporting period</inlineHelpText>
        <label>Number of Events</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Older_people_referred__c</fullName>
        <inlineHelpText>Older people newly referred during this reporting period</inlineHelpText>
        <label>Older people referred</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Older_people_with_dementia__c</fullName>
        <inlineHelpText>Older people with dementia</inlineHelpText>
        <label>Older people with dementia</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_or_uncategorised__c</fullName>
        <inlineHelpText>Other or uncategorised</inlineHelpText>
        <label>Other or uncategorised</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_or_uncategorised_referred__c</fullName>
        <inlineHelpText>Other or uncategorised newly referred during this reporting period</inlineHelpText>
        <label>Other or uncategorised referred</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>People_with_dementia_of_unknown_age__c</fullName>
        <inlineHelpText>People with dementia of unknown age</inlineHelpText>
        <label>People with dementia of unknown age</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Professionals__c</fullName>
        <inlineHelpText>Professionals</inlineHelpText>
        <label>Professionals</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Professionals_referred__c</fullName>
        <inlineHelpText>Professionals newly referred during this reporting period</inlineHelpText>
        <label>Professionals referred</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reporting_Period_Date__c</fullName>
        <formula>DATEVALUE(TEXT(Year__c) &amp; &quot;-&quot; &amp; 
CASE(TEXT(Month__c),&apos;January&apos;,&apos;01&apos;, 
&apos;February&apos;,&apos;02&apos;, 
&apos;March&apos;,&apos;03&apos;, 
&apos;April&apos;,&apos;04&apos;, 
&apos;May&apos;,&apos;05&apos;, 
&apos;June&apos;,&apos;06&apos;, 
&apos;July&apos;,&apos;07&apos;, 
&apos;August&apos;,&apos;08&apos;, 
&apos;September&apos;,&apos;09&apos;, 
&apos;October&apos;,&apos;10&apos;, 
&apos;November&apos;,&apos;11&apos;, 
&apos;December&apos;,&apos;12&apos;,&apos; &apos;)
&amp; &quot;-01&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporting Period Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reporting_Period__c</fullName>
        <formula>TEXT(Year__c) &amp; &quot;-&quot;  &amp; CASE(TEXT(Month__c),&apos;January&apos;,&apos;01&apos;,
&apos;February&apos;,&apos;02&apos;,
&apos;March&apos;,&apos;03&apos;,
&apos;April&apos;,&apos;04&apos;,
&apos;May&apos;,&apos;05&apos;,
&apos;June&apos;,&apos;06&apos;,
&apos;July&apos;,&apos;07&apos;,
&apos;August&apos;,&apos;08&apos;,
&apos;September&apos;,&apos;09&apos;,
&apos;October&apos;,&apos;10&apos;,
&apos;November&apos;,&apos;11&apos;,
&apos;December&apos;,&apos;12&apos;,&apos; &apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporting Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Name__c</fullName>
        <formula>Service__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <label>Service/Activity</label>
        <referenceTo>Services__c</referenceTo>
        <relationshipLabel>Service Measures</relationshipLabel>
        <relationshipName>Service_Measures</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Unknown_age_referred__c</fullName>
        <inlineHelpText>People with dementia of unknown age newly referred during this reporting period</inlineHelpText>
        <label>Unknown age referred</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <picklist>
            <picklistValues>
                <fullName>2001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Younger_people_referred__c</fullName>
        <inlineHelpText>Younger people newly referred during this reporting period</inlineHelpText>
        <label>Younger people referred</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Younger_people_with_dementia__c</fullName>
        <inlineHelpText>Younger people with dementia</inlineHelpText>
        <label>Younger people with dementia</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Service Measure</label>
    <nameField>
        <displayFormat>SM-{00000}</displayFormat>
        <label>Service Measure Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Measures</pluralLabel>
    <recordTypes>
        <fullName>Measures_Care_services</fullName>
        <active>true</active>
        <description>Service types for care services</description>
        <label>Care Services Measures</label>
    </recordTypes>
    <recordTypes>
        <fullName>Measures_Clients_including_professionals</fullName>
        <active>true</active>
        <description>Services with client questions and that also include professionals</description>
        <label>Clients including professionals measures</label>
    </recordTypes>
    <recordTypes>
        <fullName>Measures_Event_Services</fullName>
        <active>true</active>
        <label>Event Services Measures</label>
    </recordTypes>
    <recordTypes>
        <fullName>Measures_Information_and_helpline_services</fullName>
        <active>true</active>
        <label>Information and helpline services Measures</label>
    </recordTypes>
    <recordTypes>
        <fullName>Measures_One_to_One_Services</fullName>
        <active>true</active>
        <label>One to One Services Measures</label>
    </recordTypes>
    <recordTypes>
        <fullName>Measures_Other_services</fullName>
        <active>true</active>
        <label>Other services measures</label>
    </recordTypes>
    <recordTypes>
        <fullName>Newsletter_Services_Measures</fullName>
        <active>true</active>
        <label>Newsletter Services Measures</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>